--- a/MATH361_Rough_Draft.Rmd
+++ b/MATH361_Rough_Draft.Rmd
@@ -793,7 +793,7 @@ It makes sense that an increase in Mean Wind Speed would decrease ridership beca
 
 Given that the climate of Seattle is unique from other major U.S. cities, our results are not readily generizable beyond the Puget Sound Region. For example, the blistering heat in Houston, Texas during the summer must have a non-linear relationship with ridership. In Houston heat, a higher wind speed should raise rather than lower ridership. Additionally, it's not clear where the weather data was recorded from. The best information we have to go off of is from Kaggle, which reports that the weather was recorded in the service area. It's not clear whether time of day or location were random or scheduled. 
 
-There is a non-linear relationship between Mean Humidity and Mean Dew Point that might be exposed in a polynomial model. A more careful consideration of definitions and relations in meteorology could inform better variable selection. Because our data are recorded on successsive days, the weather from the day before predicts the weather of the current day and thus the data are loosely dependent. Our data might be better modeled in the time-series setting. Another potential extension would be to use interaction terms between Temperature and Wind Speed, for instance (Kim 2016, An 2018). Overall, the model is impressive given the seeming unpredictability of human behavior.
+There is a non-linear relationship between Mean Humidity and Mean Dew Point that might be exposed in a polynomial model. A more careful consideration of definitions and relations in meteorology could inform better variable selection. Because our data are recorded on successsive days, the weather from the day before predicts the weather of the current day and thus the data are loosely dependent. Our data might be better modeled in the time-series setting. Another potential extension would be to use interaction terms between Temperature and Wind Speed, for instance (Kim 2016, An 2018). Overall, the model is impressive given the unpredictability of human behavior.
 
 # References 
 
